Внесены небольшие корректировки

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Picaso</title>
+    <title>Picasso</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet" />
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
     <div class="pencl"><i class="fa-solid fa-pencil"></i><input type="range" class="range" style="margin-left: 20px;"/></i></div>
-      <h1 class="logo">Picaso</h1>
+      <h1 class="logo">Picasso</h1>
     
     </header>
     <div class="container">
