Сделал отрисовку canvas с одним цветом

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-    <div class="pencl"><i class="fa-solid fa-pencil"></i><input type="range" class="range" style="margin-left: 20px;"/></i></div>
+    <div class="pencl"><i class="fa-solid fa-pencil"></i><input type="range" class="range" style="margin-left: 20px;" min="0.1" max="5.0" value="2.5" step="0.1"/></i></div>
       <h1 class="logo">Picasso</h1>
     
     </header>
