--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./favicon_io/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header class="header">
-    <div class="pencl"><i class="fa-solid fa-pencil"></i><input type="range" class="range" style="margin-left: 20px;" min="0.1" max="5.0" value="2.5" step="0.1"/></i></div>
+    <div class="pencl"><i class="fa-solid fa-pencil"></i><input type="range" class="range" id="jsRange" style="margin-left: 20px;" min="1" max="10.0" value="5" step="1"/></i></div>
       <h1 class="logo">Picasso</h1>
     
     </header>
@@ -33,14 +34,14 @@
       </ul>
       <canvas class="canvas" id="canvas"></canvas>
       <ul class="colors">
-        <li class="colors__item" style="background-color: #000"></li>
-        <li class="colors__item" style="background-color: #fff"></li>
-        <li class="colors__item" style="background-color: #fb0207"></li>
-        <li class="colors__item" style="background-color: #ffff0a"></li>
-        <li class="colors__item" style="background-color: #0000ff"></li>
-        <li class="colors__item" style="background-color: #21ffff"></li>
-        <li class="colors__item" style="background-color: #21ff06"></li>
-        <li class="colors__item" style="background-color: #800080"></li>
+        <li class="colors__item jsColor" style="background-color: #000"></li>
+        <li class="colors__item jsColor" style="background-color: #fff"></li>
+        <li class="colors__item jsColor" style="background-color: #fb0207"></li>
+        <li class="colors__item jsColor" style="background-color: #ffff0a"></li>
+        <li class="colors__item jsColor" style="background-color: #0000ff"></li>
+        <li class="colors__item jsColor" style="background-color: #21ffff"></li>
+        <li class="colors__item jsColor" style="background-color: #21ff06"></li>
+        <li class="colors__item jsColor" style="background-color: #800080"></li>
       </ul>
     </div>
     <script src="script.js"></script>
