Добавлена функция заливки

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button class="controls__btn save-btn"><i class="fa-regular fa-floppy-disk"></i></button>
         </li>
         <li class="controls__item">
-          <button class="controls__btn color-drop"><i class="fa-solid fa-fill-drip"></i></button>
+          <button class="controls__btn color-drop" id="mode"><i class="fa-solid fa-fill-drip"></i></button>
         </li>
       </ul>
       <canvas class="canvas" id="canvas"></canvas>
